--- a/TeamSoccer/Views/Home/Index.cshtml
+++ b/TeamSoccer/Views/Home/Index.cshtml
@@ -1,27 +1,54 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
-<div class="row">
+<link rel="stylesheet" href="~/css/font-awesome.css" />
+<div id="league-data" class="row">
     <div class="col-md-12">
-
         <div id="leagueIcons" class="col-md-1">
             <ul data-bind="foreach:leagues">
                 <li>
-                    <a href="#" data-bind="click : $root.showLeagueData"><img data-bind="attr:{src:LeagueIcon, alt:LeagueName}" width="50" height="50" /></a>
+                    <a href="#" class="btn btn-info" data-bind="click : $root.showLeagueData"><img data-bind="attr:{src:LeagueIcon, alt:LeagueName}" width="50" height="50" /></a>
                 </li>
             </ul>
-
         </div>
 
-        <div class="col-md-push-1 col-md-10">
+        <div id="league-data-container" class="col-md-10">
+            <h3 class="text-primary">Select a League to View Fixtures, Results and League Table</h3>
+
             <ul class="nav nav-tabs">
                 <li class="active bg-success"><a href="#fixtures" data-toggle="tab" aria-expanded="true">Fixtures</a></li>
+                <li class=""><a href="#results" data-toggle="tab" aria-expanded="false">Results</a></li>
                 <li class=""><a href="#standings" data-toggle="tab" aria-expanded="false">League Standings</a></li>
             </ul>
             <div id="myTabContent" class="tab-content">
+
                 <div class="tab-pane fade active in" id="fixtures">
+                    <h4 class="text-info"><span class="text-success" data-bind="text : $root.leagueName()"></span>League Fixtures 2015/2016 Season</h4>
                     <table id="fixtures-table" class="table table-striped table-hover table-responsive table-condensed ">
+                        <thead>
+                            <tr>
+                                <th>Home Team</th>
+                                <th></th>
+                                <th>Away Team</th>
+                                <th>Date</th>
+                                <th>Kick Off</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="foreach:fixtures">
+                            <tr>
+                                <td data-bind="text:homeTeamName"></td>
+                                <td id="fixture-verus"><i  class="fa fa-angle-down fa-2x"></i></td>
+                                <td data-bind="text:awayTeamName"></td>
+                                <td ><i class="fa fa-calendar-o"></i><span data-bind="text:date"></span></td>
+                                <td><i class="glyphicon glyphicon-time"></i><span data-bind="text:time"></span></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="tab-pane fade" id="results">
+                    <h4 class="text-info"><span class="text-success" data-bind="text : $root.leagueName()"></span>League Results 2015/2016 Season</h4>
+                    <table id="results-table" class="table table-striped table-hover table-responsive table-condensed ">
                         <thead>
                             <tr>
                                 <th>Home Team</th>
@@ -31,18 +58,25 @@
                                 <th></th>
                             </tr>
                         </thead>
-                        <tbody data-bind="foreach:fixtures">
+                        <tbody data-bind="foreach:results">
                             <tr>
                                 <td data-bind="text:homeTeamName"></td>
-                                <td><i class="glyphicon glyphicon-menu-down"></i></td>
+                                <td id="result-goals">
+                                <span data-bind="text:result.goalsHomeTeam"></span>
+                                <spn><i class="fa fa-minus"></i></spn>
+                                <span data-bind="text:result.goalsAwayTeam"></span>
+                                </td>
+                                
                                 <td data-bind="text:awayTeamName"></td>
-                                <td ><i class="glyphicon glyphicon-calendar"></i><span data-bind="text:date"></span></td>
+                                <td><i class="fa fa-calendar-o"></i><span data-bind="text:date"></span></td>
                                 <td><button class="btn btn-sm btn-success" data-bind="click:$root.headToHead">Head to Head</button></td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
+
                 <div class="tab-pane fade" id="standings">
+                    <h4 class="text-info"><span class="text-success" data-bind="text : $root.leagueName()"></span>League Table 2015/2016 Season</h4>
                     <table class="table table-striped table-hover table-responsive table-condensed ">
                         <thead class="text-center">
                             <tr>
@@ -52,7 +86,7 @@
                                 <th>Won</th>
                                 <th>Draw</th>
                                 <th>Loss</th>
-                                <th>Goals</th>
+                                <th>Goals</th>  
                                 <th>Against</th>
                                 <th>Goal Diff</th>
                                 <th>Points</th>
@@ -107,15 +141,18 @@
 
     <script>
 
-
+        // Knockout VM
         var fixturesViewModel = function () {
 
             var self = this;
 
+            // KO observables to hold retrived data and are bound to sections of HTML on page
             self.leagues = ko.observableArray();
             self.leagueStandings = ko.observableArray();
             self.fixtures = ko.observableArray();
+            self.results = ko.observableArray();
             self.headToHeadList = ko.observableArray();
+            self.leagueName = ko.observable();
 
             // my api
             var leagueUri = 'http://localhost:11035//api/leagues';
@@ -124,57 +161,85 @@
             var apiToken = 'ba5634ed8cc74a94abaa10b8b43e2fab';
             var externalUri = 'http://api.football-data.org/v1';
 
-
+            // list of leagues from my api
             function getLeaguesData() {
                 ajaxHelper(leagueUri, 'GET').done(function (data) {
-
+                    self.leagueName(data[0].LeagueName);
                     self.leagues(data);
+
+                    // initalize table with data from ex api
+                    getLeagueFixtures(data[0].ID);
+                    getResults(data[0].ID)
+                    getLeagueStandings(data[0].ID);
+
                 });
             }
 
-            self.showLeagueData = function (l) {
-
-                getLeagueFixtures(l.ID);
-                getLeagueStandings(l.ID);
-
-            }
-
+            // calls above function
             getLeaguesData();
 
 
+            // fired when league icon clicked 
+            self.showLeagueData = function (l) {
+                self.leagueName(l.LeagueName);
+                getLeagueFixtures(l.ID);
+                getResults(l.ID);
+                getLeagueStandings(l.ID);
+
+            }
+            
+            // Ajax method
             function ajaxHelper(uri, method, token, data) {
                 return $.ajax({
                     headers: { 'X-Auth-Token': token },
-                    //type: method,
                     url: uri,
                     dataType: 'json',
-                    //contentType: 'application/json; charset=utf-8',
-                    data: data ? JSON.stringify(data) : null
+                   data: data ? JSON.stringify(data) : null
                 }).fail(function (jqXHR, textStatus, errorThrown) {
                     //toastr.error('Failed to get Data from Server!')
                 });
             }
 
+            // gets a list of matches perviously played between two teams
             self.headToHead = function (f) {
-                alert(f.awayTeamName);
+                alert(f);
                 ajaxHelper(externalUri + '/fixtures/'+id+'?head2head=d5', 'GET', apiToken).done(function (data) {
                     self.headToHeadList.removeAll();
                     self.headToHeadList(data);
-
                 });
 
             }
 
+            // gets list of league fixtures for next 15 days i.e ?timeFrame = n14
             function getLeagueFixtures(id) {
 
                 ajaxHelper(externalUri + '/soccerseasons/' + id + '/fixtures?timeFrame=n14', 'GET', apiToken).done(function (data) {
-                     self.leagueStandings.removeAll();
+                    self.leagueStandings.removeAll();
+
+                    $(data.fixtures).each(function (i) {
+                        data.fixtures[i].time = data.fixtures[i].date.substring(11, 16);
+                        data.fixtures[i].date = data.fixtures[i].date.substring(0, 10);
+                    });
+
                      self.fixtures(data.fixtures);
                    
                 });
 
             }
 
+            // gets results for league id
+            function getResults(id) {
+                ajaxHelper(externalUri + '/soccerseasons/' + id + '/fixtures?matchday=28', 'GET', apiToken).done(function (data) {
+                    self.results.removeAll();
+
+                    $(data.fixtures).each(function (i) {
+                        data.fixtures[i].date = data.fixtures[i].date.substring(0, 10);
+                    });
+                    self.results(data.fixtures);
+                });
+            }
+
+            // gets league table for league id
             function getLeagueStandings(id) {
                 ajaxHelper(externalUri + '/soccerseasons/' + id + '/leagueTable', 'GET', apiToken).done(function (data) {
                     self.leagueStandings.removeAll();
@@ -186,8 +251,8 @@
 
         $(document).ready(function () {
 
+            // binds VM to page
             ko.applyBindings(new fixturesViewModel());
-
         });
 
 
