fixed DbContext disposing problem, finished team page with Ko and styled, tested

--- a/TeamSoccer/Content/Site.css
+++ b/TeamSoccer/Content/Site.css
@@ -92,9 +92,13 @@ h4 span {
 }
 
 
-#fixtures td,  #results td{
+#fixtures td{
     width:20%;
 }
+
+ #results td{
+     width:25%;
+ }
 
 #result-goals{
     text-align:center;
