--- a/TeamSoccer/Views/Home/Teams.cshtml
+++ b/TeamSoccer/Views/Home/Teams.cshtml
@@ -1,7 +1,178 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Teams";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<link rel="stylesheet" href="~/css/font-awesome.css" />
 
-<p>Use this area to provide additional information.</p>
+<div id="league-data" class="row">
+    <div class="col-md-12">
+        <h3 class="text-primary">Select a League to View Fixtures, Results and League Table</h3>
+        <div class="col-md-4">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Countries</h3>
+                </div>
+                <div class="panel-body">
+                    <div class="col-md-5">
+                        <div class="list-group" data-bind="foreach:countries">
+                            <a href="#" class="list-group-item" data-bind="click:getLeagues">
+                                <p data-bind="text:CountryName"></p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="list-group" data-bind="foreach:leagues">
+                            <a href="#" class="list-group-item" data-bind="click:getTeams">
+                                <div><img data-bind="attr:{src:LeagueIcon, alt:LeagueName}" width="50" height="50" /><p data-bind="text:LeagueName"></p></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div id="teams_palyers" class="panel panel-danger">
+                <div class="panel-body">
+                    <div class="col-md-5">
+                        <h4 class="text-info">List Of Teams</h4>
+                        <div id="no-teams" class="alert alert-warning">No Teams in Database for this leage</div>
+                        <table id="teams-table" class="table table-striped table-hover table-responsive table-condensed ">
+                            <tbody data-bind="foreach:teams">
+                                <tr>
+                                    <td data-bind="text:TeamName"></td>
+                                    <td><button class="btn-sm btn-success" data-bind="click:getTeamDetails">Details</button></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div id="teamDetails" class="col-md-7">
+                        <h4 class="text-info">Team Details</h4>
+                        <table id="teams-details-table" class="table table-striped table-hover table-responsive table-condensed ">
+                            <tbody data-bind="with:teamDetails">
+                                <tr>
+                                    <td class="">Crest</td>
+                                    <td><img id="standing-crest-img" data-bind="attr:{src:crestUrl}" width="80" height="80" /></td>
+                                </tr>
+                                <tr>
+                                    <td>Team Name</td>
+                                    <td data-bind="text:name"></td>
+                                </tr>
+                                <tr>
+                                    <td>Nick Name</td>
+                                    <td data-bind="text:shortName"></td>
+                                </tr>
+                                <tr>
+                                    <td>Squad Value</td>
+                                    <td><i class="fa fa-euro"></i><span data-bind="text:squadMarketValue"></span></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        
+                    </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+@section scripts {
+
+    @Scripts.Render("~/bundles/KO")
+
+    <script>
+
+        // Knockout VM
+        var TeamsViewModel = function () {
+
+            // my api
+            var leagueUri = 'http://localhost:11035/api/leagues';
+            var countryUri = 'http://localhost:11035/api/countries';
+            var teamsUri = 'http://localhost:11035/api/teams';
+
+            // external api
+            var apiToken = 'ba5634ed8cc74a94abaa10b8b43e2fab';
+            var externalUri = 'http://api.football-data.org/v1';
+
+            self.countries = ko.observableArray();
+            self.leagues = ko.observableArray();
+            self.teams = ko.observableArray();
+            self.players = ko.observableArray();
+
+            self.teamDetails = {
+                name: ko.observable(),
+                shortName: ko.observable(),
+                squadMarketValue: ko.observable(),
+                crestUrl: ko.observable()
+            }
+
+            self.getLeagues = function (c) {
+                getLeaguesFromServer(c.ID);
+            }
+
+            self.getTeams = function (l) {
+                getTeams(l.ID);
+            }
+
+            self.getTeamDetails = function (team) {
+                ajaxHelper(externalUri + '/teams/' + team.ID, 'GET', apiToken).done(function (data) {
+                    $('#teamDetails').show();
+
+                        self.teamDetails.name(data.name);
+                        self.teamDetails.shortName(data.shortName);
+                        self.teamDetails.squadMarketValue(data.squadMarketValue.slice(0, -2));
+                        self.teamDetails.crestUrl(data.crestUrl);
+                    });
+            }
+
+            function getCountries() {
+                ajaxHelper(countryUri, 'GET', '').done(function (data) {
+                    self.countries.removeAll();
+                    self.countries(data);
+                });
+            }
+
+            function getLeaguesFromServer(country_id) {
+
+                ajaxHelper(leagueUri + '/' + country_id + '/leagueCountry', 'GET', '').done(function (data) {
+                    self.leagues.removeAll();
+                    data[0].LeagueIcon = '../' + data[0].LeagueIcon
+                    self.leagues(data);
+                    $('#teams_palyers, #teamDetails,#no-teams').hide();
+                });
+            }
+
+            function getTeams(league_id) {
+                ajaxHelper(teamsUri + '/' + league_id + '/teamLeague', 'GET', '').done(function (data) {
+                    $('#teams_palyers').show();
+                    self.teams.removeAll();
+                    if (data.length < 1)
+                    {
+                        $('#no-teams').show();
+                    }
+                    self.teams(data);
+                });
+            }
+
+            // Ajax method
+            function ajaxHelper(uri, method, token, data) {
+                return $.ajax({
+                    headers: { 'X-Auth-Token': token },
+                    url: uri,
+                    dataType: 'json',
+                    data: data ? JSON.stringify(data) : null
+                }).fail(function (jqXHR, textStatus, errorThrown) {
+                    toastr.error('Failed to get Data from Server!');
+                });
+            }
+
+            getCountries();
+
+        }
+
+        $(document).ready(function () {
+            $('#teams_palyers, #teamDetails,#no-teams').hide();
+
+            ko.applyBindings(new TeamsViewModel);
+        });
+
+    </script>
+}
