--- a/TeamSoccer/Views/Home/Teams.cshtml
+++ b/TeamSoccer/Views/Home/Teams.cshtml
@@ -44,15 +44,16 @@
                                 </tr>
                             </tbody>
                         </table>
-                        
+
                     </div>
                     <div id="teamDetails" class="col-md-7">
-                        <h4 class="text-info">Team Details</h4>
-                        <table id="teams-details-table" class="table table-striped table-hover table-responsive table-condensed ">
-                            <tbody data-bind="with:teamDetails">
+                        <div class="row">
+                            <h4 class="text-info">Team Details</h4>
+                            <table id="teams-details-table" class="table table-striped table-hover table-responsive table-condensed ">
+                                <tbody data-bind="with:teamDetails">
                                 <tr>
                                     <td class="">Crest</td>
-                                    <td><img id="standing-crest-img" data-bind="attr:{src:crestUrl}" width="80" height="80" /></td>
+                                    <td><img id="standing-crest-img" data-bind="attr:{src:crestUrl}" width="80" height="80"/></td>
                                 </tr>
                                 <tr>
                                     <td>Team Name</td>
@@ -66,15 +67,40 @@
                                     <td>Squad Value</td>
                                     <td><i class="fa fa-euro"></i><span data-bind="text:squadMarketValue"></span></td>
                                 </tr>
-                            </tbody>
-                        </table>
-
-                    </div>
+                                <tr>
+                                    <td>Players</td>
+                                    <td><a href="#" data-bind="click:getTeamPlayers">View</a></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div id="players" class="row">
+                            <h4 class="text-info">Players</h4>
+                            <table class="table-condensed table table-responsive">
+                                <thead>
+                                <tr>
+                                    <td><label>Name</label></td>
+                                    <td><label>Position</label></td>
+                                    <td><label>No.</label></td>
+                                    <td><label>Nationality</label></td>
+                                </tr>
+                                </thead>
+                                <tbody data-bind="foreach:players">
+                                <tr>
+                                    <td data-bind="text:name"></td>
+                                    <td data-bind="text:position"></td>
+                                    <td data-bind="text:jerseyNumber"></td>
+                                    <td data-bind="text:nationality"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                 </div>
-
             </div>
+
         </div>
     </div>
+</div>
 </div>
 @section scripts {
 
@@ -100,11 +126,13 @@
             self.players = ko.observableArray();
             self.leagueID = ko.observable();
             self.teamDetails = {
+                players: ko.observable(),
                 name: ko.observable(),
                 shortName: ko.observable(),
                 squadMarketValue: ko.observable(),
                 crestUrl: ko.observable()
             }
+            self.players = ko.observableArray();
 
 
             self.getLeagues = function (c) {
@@ -116,13 +144,26 @@
                 getTeams(l.ID);
             }
 
+
             self.getTeamDetails = function (team) {
                 ajaxHelper(externalUri + '/teams/' + team.ID, 'GET', apiToken).done(function (data) {
                     $('#teamDetails').show();
+                    self.teamDetails.players(data._links.players.href);
                     self.teamDetails.name(data.name);
                     self.teamDetails.shortName(data.shortName);
                     self.teamDetails.squadMarketValue(data.squadMarketValue.slice(0, -2));
                     self.teamDetails.crestUrl(data.crestUrl);
+                });
+            }
+
+            self.getTeamPlayers = function () {
+                ajaxHelper(self.teamDetails.players(), 'GET', apiToken).done(function (data) {
+                    self.players.removeAll();
+                    self.players(data.players);
+                    $('#players').show();
+
+                }).error(function () {
+                    toastr.error('unable to retrive players');
                 });
             }
 
@@ -145,9 +186,9 @@
 
                 ajaxHelper(leagueUri + '/' + country_id + '/leagueCountry', 'GET', '').done(function (data) {
                     self.leagues.removeAll();
-                    data[0].LeagueIcon = '../' + data[0].LeagueIcon
+                    data[0].LeagueIcon = '../' + data[0].LeagueIcon;
                     self.leagues(data);
-                    $('#teams_palyers, #teamDetails,#no-teams,#btn-add-teams,add-teams').hide();
+                    $('#teams_palyers, #teamDetails,#no-teams,#btn-add-teams,#add-teams,#players').hide();
                 });
             }
 
@@ -178,11 +219,12 @@
 
         }
 
+
         $(document).ready(function () {
             $('#teams_palyers, #teamDetails,#no-teams,#btn-add-teams,#add-teams').hide();
 
-            ko.applyBindings(new TeamsViewModel);
+            ko.applyBindings(TeamsViewModel);
         });
 
     </script>
-}
+}   
